--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -8,6 +8,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
@@ -25,6 +26,8 @@ html {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
   display: table;
+  -webkit-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
 
@@ -39,6 +42,7 @@ html {
   padding: 20px 30px;
   background-color: #fff;
   border-radius: 10px;
+  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
   overflow-y: auto;
   max-height: 585px;
@@ -51,8 +55,14 @@ html {
 
 .modal-header {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   background: #fff;
   padding-top: 10px;
@@ -111,4 +121,18 @@ html {
 
 .el-menu {
   border-right: none !important;
+}
+
+/* scroll bar */
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-track {
+  background: #fafbfc;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #a4a4a894;
+  border-radius: 10px;
 }
