--- a/src/styles/signin.scss
+++ b/src/styles/signin.scss
@@ -14,6 +14,8 @@
 .carousel-body {
   position: relative;
   top: 45%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   text-align: center;
   padding: 0 5vw;
@@ -44,6 +46,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 70%;
   height: 55%;
@@ -75,8 +79,14 @@
 }
 
 .el-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 1rem;
 
